@@ -172,13 +172,13 @@ KP_9 -1 9
 #
 # Joystick 2
 #
-q -2 7
-w -2 8
-e -2 9
-a -2 4
-s -2 5
-d -2 6
-z -2 1
-x -2 2
-c -2 3
+w -2 7
+e -2 8
+r -2 9
+s -2 4
+d -2 5
+f -2 6
+x -2 1
+c -2 2
+v -2 3
 space -2 0
